Implementing create route
