# src/routes/route.route.ts
@@ -1,9 +1,11 @@
 import { Router } from "express";
+import { makeCreateRouteController } from "../modules/route/factories/CreateRoute.factory";
 
 const router = Router();
 
-router.use("/route", () => {
-  console.log("teste route");
-});
+router.post(
+  "/",
+  makeCreateRouteController().handle.bind(makeCreateRouteController())
+);
 
 export default router;
